--- a/vue/index.html
+++ b/vue/index.html
@@ -6,7 +6,7 @@
 
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://unpkg.com/vue-router@4"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/8.21.1/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
 
 </head>
