--- a/vue/index.html
+++ b/vue/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Университет</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://unpkg.com/vue-router@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -19,24 +23,26 @@
         studentsComponent = {
             template: ` <div v-if="loading">Loading...</div>
                             <div v-else>
-                                <div class="table">
-                                    <div class="caption">
-                                        <h1>Список студентов</h1>
+                                <div class="container">
+                                    <div class="table">
+                                        <div class="caption">
+                                            <h1>Список студентов</h1>
+                                        </div>
+                                        <div class="header">
+                                            <div class="header h-1">Номер студентов</div>
+                                            <div class="header h-1">Фамилия Имя Отчество</div>
+                                        </div>
+                                        <div class="row" v-for="student in students">
+                                            <div class="row-item r-1">
+                                                {{ student.id}}
+                                            </div>
+                                            <div class="row-item r-2">
+                                                {{ student.name}}
+                                        </div>
                                     </div>
-                                <div class="header">
-                                    <div class="header h-1">Номер студентов</div>
-                                    <div class="header h-1">Фамилия Имя Отчество</div>
-                                </div>
-                                <div class="row" v-for="student in students">
-                                    <div class="row-item r-1">
-                                        {{ student.id}}
+                                    <div>
+                                        <button class="button" v-on:click="addStudent">Добавить</button>
                                     </div>
-                                    <div class="row-item r-2">
-                                        {{ student.name}}
-                                    </div>
-                                </div>
-                                <div>
-                                    <button class="button" v-on:click="addStudent">Добавить</button>
                                 </div>
                             </div>
                         </div> ` ,
@@ -65,7 +71,8 @@
         };
         addStudentComponent = {
             template: ` <div>
-                       <div class="add-form">
+                       <div class="container">
+                            <div class="add-form">
                             <div class="title" class="caption"><h1>Форма добавления студента</h1></div>
                             <section>
                                 <div>
@@ -86,6 +93,7 @@
                                     <button class="button" v-on:click="cancel">Отмена</button>
                                 </div>
                             </div>
+                       </div>
                        </div>
                     </div> `,
 	        data() {
